// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectAddress should render disabled 1`] = `
<div>
  <button
    class="relative w-full rounded focus:ring-2 focus:outline-none focus:ring-theme-primary-400"
    data-testid="SelectAddress__wrapper"
    disabled=""
    type="button"
  >
    <span
      class="flex absolute inset-0 items-center px-14 w-full border border-transparent"
    >
      <div
        class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
      />
    </span>
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
    >
      <div
        class="Circle__CircleWrapper-sc-d5u41q-0 bcplCx bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
      />
      <div
        class="relative flex flex-1 h-full invisible"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="SelectAddress__input"
          readonly=""
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <div
          class=""
        >
          <div
            class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class="sc-bdvvtL qGXhc"
              height="20"
              width="20"
            >
              <svg>
                user.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress should render empty 1`] = `
<div>
  <button
    class="relative w-full rounded focus:ring-2 focus:outline-none focus:ring-theme-primary-400"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="flex absolute inset-0 items-center px-14 w-full border border-transparent"
    >
      <div
        class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
      />
    </span>
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
    >
      <div
        class="Circle__CircleWrapper-sc-d5u41q-0 bcplCx bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
      />
      <div
        class="relative flex flex-1 h-full invisible"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="SelectAddress__input"
          readonly=""
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <div
          class=""
        >
          <div
            class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class="sc-bdvvtL qGXhc"
              height="20"
              width="20"
            >
              <svg>
                user.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress should render invalid 1`] = `
<div>
  <button
    class="relative w-full rounded focus:ring-2 focus:outline-none focus:ring-theme-primary-400"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="flex absolute inset-0 items-center px-14 w-full border border-transparent"
    >
      <div
        class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
      />
    </span>
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe"
    >
      <div
        class="Circle__CircleWrapper-sc-d5u41q-0 bcplCx bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
      />
      <div
        class="relative flex flex-1 h-full invisible"
      >
        <input
          aria-invalid="true"
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="SelectAddress__input"
          readonly=""
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
      >
        <span
          data-testid="Input__error"
        >
          <div
            class="sc-bdvvtL qGXhc text-theme-danger-500"
            height="20"
            width="20"
          >
            <svg>
              circle-exclamation-mark.svg
            </svg>
          </div>
        </span>
        <div
          class="pl-3"
        >
          <div
            class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class="sc-bdvvtL qGXhc"
              height="20"
              width="20"
            >
              <svg>
                user.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress should render with preselected address 1`] = `
<div>
  <button
    class="relative w-full rounded focus:ring-2 focus:outline-none focus:ring-theme-primary-400"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="flex absolute inset-0 items-center px-14 w-full border border-transparent"
    >
      <div
        class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
      >
        <span
          class="font-semibold text-base text-theme-text"
          data-testid="Address__alias"
        >
          <span
            class="TruncateEnd__Wrapper-sc-1hhdnni-0"
            data-testid="TruncateEnd"
          >
            testwallet2
          </span>
        </span>
        <span
          class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
          data-testid="Address__address"
        >
          DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr
        </span>
      </div>
    </span>
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
    >
      <div
        class="Avatar__AvatarWrapper-sc-18vw8a4-0 jiaHcL flex-shrink-0"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
        >
          <img
            alt="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"40\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"60\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
            title="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
          />
        </div>
      </div>
      <div
        class="relative flex flex-1 h-full invisible"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="SelectAddress__input"
          readonly=""
          value="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <div
          class=""
        >
          <div
            class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class="sc-bdvvtL qGXhc"
              height="20"
              width="20"
            >
              <svg>
                user.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;
